--- a/tablas.html
+++ b/tablas.html
@@ -22,7 +22,7 @@
               
               <tbody>
                   <tr>                         
-                    <td>FECHA</td>             <!-- Celdas -->
+                    <td>FECHA</td>             <!-- Celdas: -->
                     <td><input class="calendario-movile" type="date" name="fecha-esperada"><button type="submit">Enviar datos</button></td> <!-- Calendario interactivo-->
                     <td class="espaciado-lapiz"><a href="#popup"><img src="pencil-square.svg" alt="escribir"> Escribir</a></td>         <!-- referencia a popup Fecha -->
                     <td class="espaciado-cruz"><a id="#eliminar" href="#"><img src="x-circle-fill.svg" alt="icono-borrar"></a></td>
