--- a/tablas.html
+++ b/tablas.html
@@ -13,7 +13,7 @@
               <h3>Última Internación</h3>
               <thead>
                 <tr>                         <!-- Filas que contienen celdas -->
-                  <th>Última Internación</th> <!-- Celdas de encabezado -->
+                  <th>Última Internació</th> <!-- Celdas de encabezado -->
                   <th>Valor</th>
                   <th>Observación</th>
                   <th>Eliminar</th>
